--- a/puppies.html
+++ b/puppies.html
@@ -54,7 +54,7 @@
             <div class="card puppy">
                 <h1>chocolate, boys</h1>
                 <img src="images/puppies/2025/chocolates.jpeg" alt="chocolate frenchie puppy">
-                <img src="images/puppies/2025/chocolate2.jpeg" alt="chocolate frenchie puppy">
+                <!-- <img src="images/puppies/2025/chocolate2.jpeg" alt="chocolate frenchie puppy"> -->
             </div>
 
             <div class="card puppy">
