--- a/puppies.html
+++ b/puppies.html
@@ -45,9 +45,8 @@
     <!-- Head -->
     <section class="features  bg-primary py-3">
         <div class="container p-5">
-            <h1 class="xl">Puppies Available NOW: January 27th, 2025 </h1>
-            <p class="lead"> We have two chocolate boys currently available, as well as two lilacs: a boy and
-                a girl. And we have one newborn platinum male born last week. All puppies are up-to-date on vaccinations and come with a health guarantee. Please text for pictures and videos! 214.861.7611</p>
+            <h1 class="xl">Puppies Available NOW: February 15th, 2025 </h1>
+            <p class="lead"> We have puppies available. All puppies are up-to-date on vaccinations and come with a health guarantee. Please text for pictures and videos! 214.861.7611</p>
         </div>
         
         <div class="container grid">
