--- a/puppies.html
+++ b/puppies.html
@@ -45,7 +45,7 @@
     <!-- Head -->
     <section class="features  bg-primary py-3">
         <div class="container p-5">
-            <h1 class="xl">Puppies Available NOW: February 15th, 2025 </h1>
+            <h1 class="xl">Puppies Available NOW: February 24th, 2025 </h1>
             <p class="lead"> We have puppies available. All puppies are up-to-date on vaccinations and come with a health guarantee. Please text for pictures and videos! 214.861.7611</p>
         </div>
         
@@ -67,6 +67,15 @@
                 <img src="images/puppies/2025/lilacs.jpeg" alt="chocolate frenchie puppy">
                 <img src="images/puppies/2025/lilacs2.jpeg" alt="chocolate frenchie puppy">
                 <img src="images/puppies/2025/lilacs3.jpeg" alt="chocolate frenchie puppy">
+            </div>
+
+            <div class="card puppy">
+                <h1>new litter, boys and girl</h1>
+                <img src="images/puppies/2025/girl.jpeg" alt="chocolate frenchie puppy">
+                <img src="images/puppies/2025/boy1.jpeg" alt="chocolate frenchie puppy">
+                <img src="images/puppies/2025/boy2.jpeg" alt="chocolate frenchie puppy">
+                <img src="images/puppies/2025/boy3.jpeg" alt="chocolate frenchie puppy">
+                <img src="images/puppies/2025/boy5.jpeg" alt="chocolate frenchie puppy">
             </div>
 
             
