--- a/puppies.html
+++ b/puppies.html
@@ -75,6 +75,7 @@
                 <img src="images/puppies/2025/boy1.jpeg" alt="chocolate frenchie puppy">
                 <img src="images/puppies/2025/boy2.jpeg" alt="chocolate frenchie puppy">
                 <img src="images/puppies/2025/boy3.jpeg" alt="chocolate frenchie puppy">
+                <img src="images/puppies/2025/boy4.jpeg" alt="chocolate frenchie puppy">
                 <img src="images/puppies/2025/boy5.jpeg" alt="chocolate frenchie puppy">
             </div>
 
