--- a/puppies.html
+++ b/puppies.html
@@ -71,6 +71,7 @@
 
             <div class="card puppy">
                 <h1>new litter, boys and girl</h1>
+                <img src="images/puppies/2025/girl.jpeg" alt="chocolate frenchie puppy">
                 <img src="images/puppies/2025/boy1.jpeg" alt="chocolate frenchie puppy">
                 <img src="images/puppies/2025/boy2.jpeg" alt="chocolate frenchie puppy">
                 <img src="images/puppies/2025/boy4.jpeg" alt="chocolate frenchie puppy">
