--- a/puppies.html
+++ b/puppies.html
@@ -40,12 +40,12 @@
                 </nav>
             </div>
         </div>
-        <h2 class="contact">email: LaBearFrenchies @ gmail.com | text: 214.861.7611</br></h2>
+        <h2 class="contact">email: LaBearFrenchies @ gmail.com | text: 214.406.4578</br></h2>
     </header>
     <!-- Head -->
     <section class="features  bg-primary py-3">
         <div class="container p-5">
-            <h1 class="xl">Puppies Available NOW: March 3rd, 2025 </h1>
+            <h1 class="xl">Puppies Available NOW: March 7th, 2025 </h1>
             <p class="lead"> We have puppies available. All puppies are up-to-date on vaccinations and come with a health guarantee. Please text for pictures and videos! 214.861.7611</p>
         </div>
         
@@ -54,7 +54,8 @@
             <div class="card puppy">
                 <h1>chocolate, boys</h1>
                 <img src="images/puppies/2025/chocolates.jpeg" alt="chocolate frenchie puppy">
-                <!-- <img src="images/puppies/2025/chocolate2.jpeg" alt="chocolate frenchie puppy"> -->
+                <div class="sold">SOLD</div>
+                <h3>SOLD, DFW</h3>
             </div>
 
             <div class="card puppy">
@@ -67,6 +68,8 @@
                 <img src="images/puppies/2025/lilacs.jpeg" alt="chocolate frenchie puppy">
                 <img src="images/puppies/2025/lilacs2.jpeg" alt="chocolate frenchie puppy">
                 <img src="images/puppies/2025/lilacs3.jpeg" alt="chocolate frenchie puppy">
+                <div class="sold">SOLD</div>
+                <h3>SOLD</h3>
             </div>
 
             <div class="card puppy">
