--- a/puppies.html
+++ b/puppies.html
@@ -45,41 +45,36 @@
     <!-- Head -->
     <section class="features  bg-primary py-3">
         <div class="container p-5">
-            <h1 class="xl">Puppies Available NOW: March 7th, 2025 </h1>
-            <p class="lead"> We have puppies available. All puppies are up-to-date on vaccinations and come with a health guarantee. Please text for pictures and videos! 214.861.7611</p>
+            <h1 class="xl">Puppies Available NOW: March 12th, 2025 </h1>
+            <p class="lead"> We have puppies available. C.C., our full fluffy merle, has started to wean her first litter. So excited about these gorgeous little ones - they're all fluffy carriers. All puppies are up-to-date on vaccinations and come with a health guarantee. Please text for pictures and videos! 214.406.4578</p>
         </div>
         
         <div class="container grid">
 
             <div class="card puppy">
-                <h1>chocolate, boys</h1>
-                <img src="images/puppies/2025/chocolates.jpeg" alt="chocolate frenchie puppy">
-                <div class="sold">SOLD</div>
-                <h3>SOLD, DFW</h3>
-            </div>
-
-            <div class="card puppy">
-                <h1>newborn platinum, boy</h1>
-                <img src="images/puppies/2025/newborn.jpeg" alt="chocolate frenchie puppy">
-            </div>
-
-            <div class="card puppy">
-                <h1>lilacs, boy and girl</h1>
-                <img src="images/puppies/2025/lilacs.jpeg" alt="chocolate frenchie puppy">
-                <img src="images/puppies/2025/lilacs2.jpeg" alt="chocolate frenchie puppy">
-                <img src="images/puppies/2025/lilacs3.jpeg" alt="chocolate frenchie puppy">
-                <div class="sold">SOLD</div>
-                <h3>SOLD</h3>
-            </div>
-
-            <div class="card puppy">
-                <h1>new litter, boys and girl</h1>
+                <h1>boys and girl available</h1>
                 <img src="images/puppies/2025/girl.jpeg" alt="chocolate frenchie puppy">
                 <img src="images/puppies/2025/boy1.jpeg" alt="chocolate frenchie puppy">
                 <img src="images/puppies/2025/boy2.jpeg" alt="chocolate frenchie puppy">
                 <img src="images/puppies/2025/boy4.jpeg" alt="chocolate frenchie puppy">
                 <img src="images/puppies/2025/boy5.jpeg" alt="chocolate frenchie puppy">
             </div>
+
+            <div class="card puppy">
+                <h1>C.C.'s puppies, boys and girls</h1>
+                <img src="images/puppies/2025/cc1.jpeg" alt="chocolate frenchie puppy">
+                <img src="images/puppies/2025/cc2.jpeg" alt="chocolate frenchie puppy">
+                <img src="images/puppies/2025/cc3.jpeg" alt="chocolate frenchie puppy">
+                <img src="images/puppies/2025/cc4.jpeg" alt="chocolate frenchie puppy">
+                <img src="images/puppies/2025/cc5.jpeg" alt="chocolate frenchie puppy">
+                <!-- <div class="sold">SOLD</div>
+                <h3>SOLD, DFW</h3> -->
+            </div>
+
+            <div class="card puppy">
+                <h1>newborn platinum, boy</h1>
+                <img src="images/puppies/2025/newborn.jpeg" alt="chocolate frenchie puppy">
+            </div>            
 
             
 
