--- a/puppies.html
+++ b/puppies.html
@@ -61,8 +61,8 @@
                 <img src="images/puppies/2025/m2p1.jpeg" alt="chocolate frenchie puppy">
                 <img src="images/puppies/2025/m4p.jpeg" alt="chocolate frenchie puppy">
                 <img src="images/puppies/2025/m4p1.jpeg" alt="chocolate frenchie puppy">
-                <!-- <img src="images/puppies/2025/m5p1.jpeg" alt="chocolate frenchie puppy">
-                <img src="images/puppies/2025/m5p.jpeg" alt="chocolate frenchie puppy"> -->
+                <img src="images/puppies/2025/m5p1.jpeg" alt="chocolate frenchie puppy">
+                <img src="images/puppies/2025/m5p.jpeg" alt="chocolate frenchie puppy">
              
             </div>
 
