--- a/puppies.html
+++ b/puppies.html
@@ -67,11 +67,14 @@
             </div>
 
             <div class="card puppy">
-                <h1>C.C.'s puppies, boys and girl</h1>
-                <img src="images/puppies/2025/f1cc.jpeg" alt="chocolate frenchie puppy">
+                <h1>C.C.'s puppies, boy and girl</h1>
+                <img src="images/puppies/2025/f1cc2.jpeg" alt="chocolate frenchie puppy">
                 <img src="images/puppies/2025/f1cc1.jpeg" alt="chocolate frenchie puppy">
+                <img src="images/puppies/2025/f1cc3.jpeg" alt="chocolate frenchie puppy">
                 <img src="images/puppies/2025/m2cc.jpeg" alt="chocolate frenchie puppy">
                 <img src="images/puppies/2025/m2cc1.jpeg" alt="chocolate frenchie puppy">
+                <img src="images/puppies/2025/m2cc2.jpeg" alt="chocolate frenchie puppy">
+                <img src="images/puppies/2025/m2cc3.jpeg" alt="chocolate frenchie puppy">
                 <!-- <div class="sold">SOLD</div>
                 <h3>SOLD, DFW</h3> -->
             </div>
@@ -79,6 +82,8 @@
             <div class="card puppy">
                 <h1>lilac fawn, boy</h1>
                 <img src="images/puppies/2025/sylvia.jpg" alt="chocolate frenchie puppy">
+                <img src="images/puppies/2025/sylvia1.jpeg" alt="chocolate frenchie puppy">
+                <img src="images/puppies/2025/sylvia2.jpeg" alt="chocolate frenchie puppy">
             </div> 
 
             <!-- <div class="card puppy">
