--- a/puppies.html
+++ b/puppies.html
@@ -61,6 +61,7 @@
                 <img src="images/puppies/2025/m2p1.jpeg" alt="chocolate frenchie puppy">
                 <img src="images/puppies/2025/m4p.jpeg" alt="chocolate frenchie puppy">
                 <img src="images/puppies/2025/m4p1.jpeg" alt="chocolate frenchie puppy">             
+                <img src="images/puppies/2025/IMG_8144.jpg" alt="chocolate frenchie puppy">             
             </div>
 
             <div class="card puppy">
