--- a/puppies.html
+++ b/puppies.html
@@ -45,7 +45,7 @@
     <!-- Head -->
     <section class="features  bg-primary py-3">
         <div class="container p-5">
-            <h1 class="xl">Puppies Available NOW: March 27th, 2025 </h1>
+            <h1 class="xl">Puppies Available NOW: March 31st, 2025 </h1>
             <p class="lead"> Happy Spring, Y'all! It's puppy time! All the spring babies are so exciting. All puppies are up-to-date on vaccinations and come with a health guarantee. Please text for pictures and videos! 214.406.4578</p>
         </div>
         
@@ -65,10 +65,7 @@
             </div>
 
             <div class="card puppy">
-                <h1>C.C.'s puppies, boy and girl</h1>
-                <img src="images/puppies/2025/f1cc2.jpeg" alt="chocolate frenchie puppy">
-                <img src="images/puppies/2025/f1cc1.jpeg" alt="chocolate frenchie puppy">
-                <img src="images/puppies/2025/f1cc3.jpeg" alt="chocolate frenchie puppy">
+                <h1>C.C.'s black and tan boy</h1>
                 <img src="images/puppies/2025/m2cc.jpeg" alt="chocolate frenchie puppy">
                 <img src="images/puppies/2025/m2cc1.jpeg" alt="chocolate frenchie puppy">
                 <img src="images/puppies/2025/m2cc2.jpeg" alt="chocolate frenchie puppy">
