--- a/puppies.html
+++ b/puppies.html
@@ -45,39 +45,43 @@
     <!-- Head -->
     <section class="features  bg-primary py-3">
         <div class="container p-5">
-            <h1 class="xl">Puppies Available NOW: April 3rd, 2025 </h1>
-            <p class="lead"> Happy Spring, Y'all! It's puppy time! All the spring babies are so exciting. All puppies are up-to-date on vaccinations and come with a health guarantee. Please text for pictures and videos! 214.406.4578</p>
+            <h1 class="xl">Puppies Available NOW: April 9th, 2025 </h1>
+            <p class="lead"> Happy Spring, Y'all! It's puppy time! We have one girl and four boys available, all exotic coat colors. All the spring babies are so exciting. All puppies are up-to-date on vaccinations and come with a health guarantee. Please text for pictures and videos! 214.406.4578</p>
         </div>
         
         <div class="container grid">
 
             <div class="card puppy">
-                <h1>Freya's puppies, boys and girl available</h1>
-                <img src="images/puppies/2025/f1p.jpeg" alt="chocolate frenchie puppy">
-                <img src="images/puppies/2025/f1p1.jpeg" alt="chocolate frenchie puppy">
-                <!-- <img src="images/puppies/2025/m1p.jpeg" alt="chocolate frenchie puppy">
-                <img src="images/puppies/2025/m1p1.jpeg" alt="chocolate frenchie puppy"> -->
-                <img src="images/puppies/2025/m2p.jpeg" alt="chocolate frenchie puppy">
-                <img src="images/puppies/2025/m2p1.jpeg" alt="chocolate frenchie puppy">
-                <img src="images/puppies/2025/m4p.jpeg" alt="chocolate frenchie puppy">
-                <img src="images/puppies/2025/m4p1.jpeg" alt="chocolate frenchie puppy">             
-                <img src="images/puppies/2025/IMG_8144.jpg" alt="chocolate frenchie puppy">             
+                <h1>female</h1>
+                <img src="images/puppies/2025/female.jpeg" alt="frenchie puppy">
+                <img src="images/puppies/2025/female1.jpeg" alt="frenchie puppy">          
             </div>
 
             <div class="card puppy">
-                <h1>lilac fawn, boy</h1>
-                <img src="images/puppies/2025/sylvia.jpg" alt="chocolate frenchie puppy">
-                <img src="images/puppies/2025/sylvia1.jpeg" alt="chocolate frenchie puppy">
-                <img src="images/puppies/2025/sylvia2.jpeg" alt="chocolate frenchie puppy">
+                <h1>lilac fawn, male #1</h1>
+                <img src="images/puppies/2025/male1.1.jpeg" alt="frenchie puppy">
+                <img src="images/puppies/2025/male1.jpeg" alt="frenchie puppy">
             </div> 
             
             <div class="card puppy">
-                <h1>C.C.'s black and tan boy</h1>
-                <img src="images/puppies/2025/m2cc3.jpeg" alt="chocolate frenchie puppy">
-                <div class="sold">SOLD</div>
-                <h3>SOLD, Billings, Montana</h3>
+                <h1>male #2</h1>
+                <img src="images/puppies/2025/male2.1.jpeg" alt="frenchie puppy">
+                <img src="images/puppies/2025/male2.jpeg" alt="frenchie puppy">
+                <!-- <div class="sold">SOLD</div>
+                <h3>SOLD, Billings, Montana</h3> -->
             </div>
 
+            <div class="card puppy">
+                <h1>male #3</h1>
+                <img src="images/puppies/2025/male3.jpeg" alt="frenchie puppy">
+                <img src="images/puppies/2025/male3.1.jpeg" alt="frenchie puppy">
+            </div> 
+
+            <div class="card puppy">
+                <h1>male #4</h1>
+                <img src="images/puppies/2025/male4.jpeg" alt="frenchie puppy">
+                <img src="images/puppies/2025/male4.1.jpeg" alt="frenchie puppy">
+            </div> 
 
             <!-- <div class="card puppy">
                 <h1>chocolate and tan, boy </h1>
