--- a/puppies.html
+++ b/puppies.html
@@ -45,14 +45,14 @@
     <!-- Head -->
     <section class="features  bg-primary py-3">
         <div class="container p-5">
-            <h1 class="xl">Puppies Available NOW: April 9th, 2025 </h1>
+            <h1 class="xl">Puppies Available NOW: April 18th, 2025 </h1>
             <p class="lead"> Happy Spring, Y'all! It's puppy time! We have one girl and four boys available, all of them with exotic coat colors. All the spring babies are so exciting. All puppies are up-to-date on vaccinations and come with a health guarantee. Please text for pictures and videos! 214.406.4578</p>
         </div>
         
         <div class="container grid">
 
             <div class="card puppy">
-                <h1>female</h1>
+                <h1>red fawn, female</h1>
                 <img src="images/puppies/2025/female.jpeg" alt="frenchie puppy">
                 <img src="images/puppies/2025/female1.jpeg" alt="frenchie puppy">          
             </div>
@@ -64,7 +64,7 @@
             </div> 
             
             <div class="card puppy">
-                <h1>male #2</h1>
+                <h1>blue and tan, male #2</h1>
                 <img src="images/puppies/2025/male2.1.jpeg" alt="frenchie puppy">
                 <img src="images/puppies/2025/male2.jpeg" alt="frenchie puppy">
                 <!-- <div class="sold">SOLD</div>
@@ -72,13 +72,13 @@
             </div>
 
             <div class="card puppy">
-                <h1>male #3</h1>
+                <h1>blue and tan, male #3</h1>
                 <img src="images/puppies/2025/male3.jpeg" alt="frenchie puppy">
                 <img src="images/puppies/2025/male3.1.jpeg" alt="frenchie puppy">
             </div> 
 
             <div class="card puppy">
-                <h1>male #4</h1>
+                <h1>blue and tan, male #4</h1>
                 <img src="images/puppies/2025/male4.jpeg" alt="frenchie puppy">
                 <img src="images/puppies/2025/male4.1.jpeg" alt="frenchie puppy">
             </div> 
