--- a/puppies.html
+++ b/puppies.html
@@ -45,8 +45,8 @@
     <!-- Head -->
     <section class="features  bg-primary py-3">
         <div class="container p-5">
-            <h1 class="xl">Puppies Available NOW: May 9th, 2025 </h1>
-            <p class="lead"> Happy Spring, Y'all! It's puppy time! We have one girl and two boys available, all of them with exotic coat colors. All the spring babies are so exciting. All puppies are up-to-date on vaccinations and come with a health guarantee. Please text for pictures and videos! 214.406.4578</p>
+            <h1 class="xl">Puppies Available NOW: May 26th, 2025 </h1>
+            <p class="lead"> Happy Spring, Y'all! It's puppy time! just had three new litters, all of them with exotic coat colors: isabella, rojo, chocolate, new shade, lilac. All the spring babies are so exciting. All puppies are up-to-date on vaccinations and come with a health guarantee. Please text for pictures and videos! 214.406.4578</p>
         </div>
         
         <div class="container grid">
