--- a/puppies.html
+++ b/puppies.html
@@ -49,8 +49,8 @@
                 <h1>Hard Work Being a Puppy</h1>
                 <img src="images/puppies/2025/litter.jpeg" alt="frenchie puppy">          
             </div>
-            <h1 class="xl">Puppies Available NOW: May 29th, 2025 </h1>
-            <p class="lead"> Happy Spring, Y'all! It's puppy time! we just had three new litters, all of them with exotic coat colors: isabella, rojo isabella, new shade isabella, lilac, chocolate, and more! All puppies are up-to-date on vaccinations and come with a health guarantee. Delivery is available. Please text for pictures and videos! 214.406.4578</p>
+            <h1 class="xl">Puppies Available NOW: June 18th, 2025 </h1>
+            <p class="lead"> Our mamas had three litters in  May, all of them with exotic coat colors: isabella, rojo isabella, new shade isabella, lilac, chocolate, and more! All puppies are up-to-date on vaccinations and come with a health guarantee. Delivery is available. Please text for pictures and videos! 214.406.4578</p>
         </div>
         
         <div class="container grid">
@@ -60,20 +60,33 @@
              
 
             <div class="card puppy">
-                <h1>puppy preview</h1>
-                <img src="images/puppies/2025/lilactanf.jpg" alt="frenchie puppy">
-                <img src="images/puppies/2025/liter1.jpg" alt="frenchie puppy">
-                <img src="images/puppies/2025/liter3.jpg" alt="frenchie puppy">
-                <img src="images/puppies/2025/liter6.jpg" alt="frenchie puppy">
-                <img src="images/puppies/2025/liter4.jpg" alt="frenchie puppy">
-                <img src="images/puppies/2025/liter5.jpg" alt="frenchie puppy">
-                <img src="images/puppies/2025/liter8.jpg" alt="frenchie puppy">
-                <img src="images/puppies/2025/liter7.jpg" alt="frenchie puppy">
-                <img src="images/puppies/2025/liter9.jpg" alt="frenchie puppy">
-                <img src="images/puppies/2025/liter10.jpg" alt="frenchie puppy">
-                <img src="images/puppies/2025/liter11.jpg" alt="frenchie puppy">
-
+                <h1>boy 1, chocolate fawn</h1>
+                <img src="images/puppies/2025/m1chocfawn.jpg" alt="frenchie puppy">
+                <img src="images/puppies/2025/m1chocfawn2.jpg" alt="frenchie puppy">
             </div> 
+
+            <div class="card puppy">
+                <h1>boy 2, chocolate</h1>
+                <img src="images/puppies/2025/m2choc.jpg" alt="frenchie puppy">
+                <img src="images/puppies/2025/m2choc2.jpg" alt="frenchie puppy">
+            </div>
+
+            <div class="card puppy">
+                <h1>boy 3, black and tan</h1>
+                <img src="images/puppies/2025/m3bnt.JPG" alt="frenchie puppy">
+                <img src="images/puppies/2025/m3bnt2.jpg" alt="frenchie puppy">
+            </div>
+
+            <div class="card puppy">
+                <h1>boy 4, isabella</h1>
+                <img src="images/puppies/2025/m4isa.JPG" alt="frenchie puppy">
+                <img src="images/puppies/2025/m4isa2.JPG" alt="frenchie puppy">
+            </div>
+
+            <div class="card puppy">
+                <h1>boy 5, fluffy, black</h1>
+                <img src="images/puppies/2025/m5fluffy.jpg" alt="frenchie puppy">
+            </div>
 
 
             <!-- <div class="card puppy">
