Change img extension case

--- a/puppies.html
+++ b/puppies.html
@@ -54,7 +54,7 @@
             <div class="card puppy">
                 <h1>boy 1, chocolate fawn</h1>
                 <img src="images/puppies/2025/m1chocfawn.jpg" alt="frenchie puppy">
-                <img src="images/puppies/2025/m1chocfawn2.jpg" alt="frenchie puppy">
+                <img src="images/puppies/2025/m1chocfawn2.JPG" alt="frenchie puppy">
             </div> 
 
             <div class="card puppy">
