--- a/puppies.html
+++ b/puppies.html
@@ -44,8 +44,12 @@
     </header>
     <!-- Head -->
     <section class="features  bg-primary py-3">
+        <div>
+        </div>
         <div class="container p-5">
-            <h1 class="xl">Puppies Available NOW: June 18th, 2025 </h1>
+                            <img src="images/puppies/2025//grouppic.jpeg" alt="frenchie puppy">
+
+            <h1 class="xl">Puppies Available NOW: June 20th, 2025 </h1>
             <p class="lead"> Our mamas had three litters in  May, all of them with exotic coat colors: isabella, rojo isabella, new shade isabella, lilac, chocolate, and more! All puppies are up-to-date on vaccinations and come with a health guarantee. Delivery is available. Please text for pictures and videos! 214.406.4578</p>
         </div>
         
