--- a/puppies.html
+++ b/puppies.html
@@ -49,95 +49,41 @@
         <div class="container p-5">
                             <img src="images/puppies/2025//grouppic.jpeg" alt="frenchie puppy">
 
-            <h1 class="xl">Puppies Available NOW: June 20th, 2025 </h1>
-            <p class="lead"> Our mamas had three litters in  May, all of them with exotic coat colors: isabella, rojo isabella, new shade isabella, lilac, chocolate, and more! All puppies are up-to-date on vaccinations and come with a health guarantee. Delivery is available. Please text for pictures and videos! 214.406.4578</p>
+            <h1 class="xl">Puppies Available NOW: June 29th, 2025 </h1>
+            <p class="lead"> All puppies are up-to-date on vaccinations and come with a health guarantee and full breeding rights. Delivery is available. 
+                The prices of the puppies vary depending on sex and color. Please text for the most up-to-date pictures and videos or to schedule a video call and meet a puppy! 214.406.4578
+
+                
+                <em>Please note: due to a recent spike in spam, calls and texts from 'google voice' numbers will be blocked.</em>
+            </p>
         </div>
         
         <div class="container grid">
 
             <div class="card puppy">
-                <h1>boy 1, chocolate fawn</h1>
-                <img src="images/puppies/2025/m1chocfawn.jpg" alt="frenchie puppy">
-                <img src="images/puppies/2025/m1chocfawn2.JPG" alt="frenchie puppy">
+                <h1>boy 1, isabella</h1>
+                <img src="images/puppies/2025/isabella male.jpg" alt="frenchie puppy">
             </div> 
 
             <div class="card puppy">
                 <h1>boy 2, chocolate</h1>
-                <img src="images/puppies/2025/m2choc.jpg" alt="frenchie puppy">
-                <img src="images/puppies/2025/m2choc2.jpg" alt="frenchie puppy">
+                <img src="images/puppies/2025/choc male.jpg" alt="frenchie puppy">
             </div>
 
             <div class="card puppy">
-                <h1>boy 3, black and tan</h1>
-                <img src="images/puppies/2025/m3bnt.JPG" alt="frenchie puppy">
-                <img src="images/puppies/2025/m3bnt2.jpg" alt="frenchie puppy">
+                <h1>girl 1, lilac and tan</h1>
+                <img src="images/puppies/2025/lilactan female.jpg" alt="frenchie puppy">
             </div>
 
             <div class="card puppy">
-                <h1>boy 4, isabella</h1>
-                <img src="images/puppies/2025/m4isa.JPG" alt="frenchie puppy">
-                <img src="images/puppies/2025/m4isa2.JPG" alt="frenchie puppy">
+                <h1>girl 2, isabella</h1>
+                <img src="images/puppies/2025/isabella female.jpg" alt="frenchie puppy">
             </div>
 
             <div class="card puppy">
-                <h1>boy 5, fluffy, black</h1>
-                <img src="images/puppies/2025/m5fluffy.jpg" alt="frenchie puppy">
+                <h1>girl 3, black</h1>
+                <img src="images/puppies/2025/black female.jpg" alt="frenchie puppy">
             </div>
-
-            <div class="card puppy">
-                <h1>girl 1, chocolate and tan</h1>
-                <img src="images/puppies/2025/f1choctan3.jpg" alt="frenchie puppy">
-                <img src="images/puppies/2025/f1choctan2.jpg" alt="frenchie puppy">
-            </div>
-
-            <div class="card puppy">
-                <h1>girl 2, rojo and tan</h1>
-                <img src="images/puppies/2025/f2rojo.JPG" alt="frenchie puppy">
-                <img src="images/puppies/2025/f2rojo2.jpg" alt="frenchie puppy">
-            </div>
-
-            <div class="card puppy">
-                <h1>girl 3, blue fawn 1</h1>
-                <img src="images/puppies/2025/f3bfawn.jpg" alt="frenchie puppy">
-                <img src="images/puppies/2025/f3bfawn2.JPG" alt="frenchie puppy">
-            </div>
-
-            <div class="card puppy">
-                <h1>girl 4, lilac and tan 1</h1>
-                <img src="images/puppies/2025/f4lnt.jpg" alt="frenchie puppy">
-                <img src="images/puppies/2025/f4lnt2.JPG" alt="frenchie puppy">
-            </div>
-
-            <div class="card puppy">
-                <h1>girl 5, isabella</h1>
-                <img src="images/puppies/2025/f5isa.jpg" alt="frenchie puppy">
-                <img src="images/puppies/2025/f5isa2.JPG" alt="frenchie puppy">
-            </div>
-
-            <div class="card puppy">
-                <h1>girl 6, lilac and tan 2</h1>
-                <img src="images/puppies/2025/f6lnt.jpg" alt="frenchie puppy">
-                <img src="images/puppies/2025/f6lnt2.JPG" alt="frenchie puppy">
-            </div>
-
-            <div class="card puppy">
-                <h1>girl 7, blue fawn 2</h1>
-                <img src="images/puppies/2025/f7bluef.jpg" alt="frenchie puppy">
-                <img src="images/puppies/2025/f7bluef2.JPG" alt="frenchie puppy">
-            </div>
-
-            <div class="card puppy">
-                <h1>girl 8, black</h1>
-                <img src="images/puppies/2025/f8black.JPG" alt="frenchie puppy">
-                <img src="images/puppies/2025/f8black2.JPG" alt="frenchie puppy">
-            </div>
-
-            <div class="card puppy">
-                <h1>girl 9, fluffy, chocolate and tan</h1>
-                <img src="images/puppies/2025/f9fluffy2.JPG" alt="frenchie puppy">
-                <img src="images/puppies/2025/f9fluffy.jpg" alt="frenchie puppy">
-            </div>
-
 
             <!-- <div class="card puppy">
                 <h1>chocolate and tan, boy </h1>
