Update stude page

--- a/stud.html
+++ b/stud.html
@@ -44,19 +44,16 @@
             </nav>
         </div>
     </div>
-    <h2 class="contact">email: LaBearFrenchies<i class="fas fa-at"></i>gmail.com | text: 214.861.7611</h3>
+    <h2 class="contact">email: LaBearFrenchies<i class="fas fa-at"></i>gmail.com | text: 214.406.4578</h3>
     </header>
         <!-- Head -->
         <section class="bg-primary py-3" id="romeo">
             <div class="container grid">
                 <div>
-                    <h1 class="xl">La Bear's Chocolate Shop</h1>
-                    <p>We currently do not offer any of studs. Please check back in the future or text us for more information.</p>
-                    <!-- <p class="lead"> Get your chocolates here. La Bear Frenchies now has three chocolate-colored, AKC
-                        registered Studs. Romeo, out of Mr GORE, carries double testable choloate with one cocoa and can
-                        produce both rojo and new shade rojo pups. Our boy Ferrero just turned 7 months, and is a l4
-                        fluffy carrier with some visible longer hafir. JerBear, our quad carrier lilac-n-tan with double intensity (ii).
-                    </p> -->
+                    <h1 class="xl">La Bear's Bodie</h1>
+                    <!-- <p>We currently do not offer any of studs. Please check back in the future or text us for more information.</p> -->
+                    <p class="lead"> 
+                    </p>
                 </div>
                 <!-- <div class="card">
                     <img src="images/Stud/romeo-2-2.jpg" alt="rojo chocolate merle french bulldog">
@@ -66,42 +63,43 @@
             </div>
         </section>
 
-        <!-- <section class="docs-main bg-my-4">
+        <section class="docs-main bg-my-4">
 
             <div class="container grid">
 
                 <div class="card bg-light p-3">
 
-                    <h3 class="my-2">LaBear's Romeo Rojo</h3>
+                    <h3 class="my-2">LaBear's Bodie</h3>
                     <nav>
                         <ul>
-                            <li><a class="text-primary" href="#">Rojo Chocolate Merle </a></li>
-                            <li><a href="#">Double Recessive Testable Chocolate (bb) </a></li>
-                            <li><a href="#">Carries Cocoa (Coco)</a></li>
-                            <li><a href="#">Four Panel Clear</a></li>
-                            <li><a href="#">Sired by Mr. Gore</a></li>
+                            <li><a class="text-primary" href="#">Platinum, fluffy carrier</a></li>
+                            <li><a href="#">Double cream (ee)  </a></li>
+                            <li><a href="#">Double Cocoa (CoCo)</a></li>
+                            <li><a href="#">Double Testable Choc (bb)</a></li>
+                            <li><a href="#">Double Testable blue (dd)</a></li>
+                            <li><a href="#">Sired by Bevo</a></li>
                         </ul>
                     </nav>
 
                     <h3 class="my-2">Stud Fee</h3>
                     <nav>
                         <ul>
-                            <li><a href="#">please inquire</a></li>
+                            <li><a href="#">$1,500</a></li>
                         </ul>
                     </nav>
 
                 </div>
 
                 <div class="card">
-                    <h2>LaBear's Romeo Rojo</h2>
-                    <h3>Limited Breeding Only</h3>
+                    <h2>LaBear's Bodie, Platinum & Fluffy Carrier</h2>
+                    <h3>See Puppy page for photos of his current pups</h3>
 
-                    <img src="images/Stud/romeo-2-2.jpg" alt="rojo chocolate merle french bulldog">
-                    <img src="images/Stud/romeoStudCard.jpg" alt="rojo chocolate merle french bulldog">
-                    <img src="images/Stud/Romeo.jpg" alt="rojo chocolate merle french bulldog">
+                    <img src="images/Stud/bodie.jpg" alt="platinum french bulldog stud">
+                    <!-- <img src="images/Stud/romeoStudCard.jpg" alt="rojo chocolate merle french bulldog">
+                    <img src="images/Stud/Romeo.jpg" alt="rojo chocolate merle french bulldog"> -->
 
                 </div>
-            </div> -->
+            </div>
             <!-- <div class="container grid">
 
                 <div class="card bg-light p-3">
@@ -133,8 +131,8 @@
                     <img src="images/Stud/ferr-3.jpg" alt="chocolate fluffy french bulldog">
 
                 </div>
-            </div> -->
-            <!-- <div class="container grid">
+            </div>
+            <div class="container grid">
 
                 <div class="card bg-light p-3">
 
@@ -156,9 +154,9 @@
                         </ul>
                     </nav>
 
-                </div> -->
+                </div>
 
-                <!-- <div class="card">
+                <div class="card">
                     <h2>Jer Beau Bear</h2>
                     <img src="images/Stud/jerbear-4.jpg" alt="lilac and tan french bulldog">
                     <img src="images/Stud/Jerbear-1.jpg" alt="lilac and tan french bulldog">
