--- a/puppies.html
+++ b/puppies.html
@@ -47,14 +47,18 @@
         <div>
         </div>
         <div class="container p-5">
-                            <img src="images/puppies/2025//grouppic.jpeg" alt="frenchie puppy">
+            <img src="images/puppies/2025/isabellagroup.jpeg" alt="frenchie puppy">
+            <img src="images/puppies/2025/isagroup2.jpg" alt="frenchie puppy">
+            <img src="images/puppies/2025/chocgroup.jpg" alt="frenchie puppy">
+            <img src="images/puppies/2025/lilacgroup.jpg" alt="frenchie puppy">
+            <img src="images/puppies/2025/fawnsgroup.jpg" alt="frenchie puppy">
 
-            <h1 class="xl">Puppies Available NOW: June 29th, 2025 </h1>
+            <h1 class="xl">Puppies Available NOW: July 4th, 2025 </h1>
             <p class="lead"> All puppies are up-to-date on vaccinations and come with a health guarantee and full breeding rights. Delivery is available. 
                 The prices of the puppies vary depending on sex and color. Please text for the most up-to-date pictures and videos or to schedule a video call and meet a puppy! 214.406.4578
 
                 
-                <em>Please note: due to a recent spike in spam, calls and texts from 'google voice' numbers will be blocked.</em>
+                <!-- <em>Please note: due to a recent spike in spam, calls and texts from 'google voice' numbers will be blocked.</em> -->
             </p>
         </div>
         
@@ -68,6 +72,16 @@
             <div class="card puppy">
                 <h1>boy 2, chocolate</h1>
                 <img src="images/puppies/2025/choc male.jpg" alt="frenchie puppy">
+            </div>
+
+            <div class="card puppy">
+                <h1>boy 3, chodolate fawn</h1>
+                <img src="images/puppies/2025/chocfwmale.jpeg" alt="frenchie puppy">
+            </div> 
+
+            <div class="card puppy">
+                <h1>boy 4, black and tan</h1>
+                <img src="images/puppies/2025/bntmale.jpeg" alt="frenchie puppy">
             </div>
 
             <div class="card puppy">
