--- a/puppies.html
+++ b/puppies.html
@@ -51,7 +51,7 @@
             <img src="images/puppies/2025/isagroup2.jpg" alt="frenchie puppy">
             <img src="images/puppies/2025/chocgroup.jpg" alt="frenchie puppy">
             <img src="images/puppies/2025/lilacgroup.jpg" alt="frenchie puppy">
-            <img src="images/puppies/2025/fawnsgroup.jpg" alt="frenchie puppy">
+            <!-- <img src="images/puppies/2025/fawnsgroup.jpg" alt="frenchie puppy"> -->
 
             <h1 class="xl">Puppies Available NOW: July 4th, 2025 </h1>
             <p class="lead"> All puppies are up-to-date on vaccinations and come with a health guarantee and full breeding rights. Delivery is available. 
