--- a/puppies.html
+++ b/puppies.html
@@ -75,7 +75,7 @@
             </div>
 
             <div class="card puppy">
-                <h1>boy 3, chodolate fawn</h1>
+                <h1>boy 3, chocolate fawn</h1>
                 <img src="images/puppies/2025/chocfwmale.jpeg" alt="frenchie puppy">
             </div> 
 
