--- a/puppies.html
+++ b/puppies.html
@@ -53,7 +53,7 @@
             <img src="images/puppies/2025/lilacgroup.jpg" alt="frenchie puppy">
             <!-- <img src="images/puppies/2025/fawnsgroup.jpg" alt="frenchie puppy"> -->
 
-            <h1 class="xl">Puppies Available NOW: July 19th, 2025 </h1>
+            <h1 class="xl">Puppies Available NOW: July 20th, 2025 </h1>
             <p class="lead"> All puppies are up-to-date on vaccinations and come with a health guarantee and full breeding rights. Delivery is available. 
                 The prices of the puppies vary depending on sex and color. Please text for the most up-to-date pictures and videos or to schedule a video call and meet a puppy! 214.406.4578
 
@@ -67,6 +67,8 @@
             <div class="card puppy">
                 <h1>boy 1, isabella</h1>
                 <img src="images/puppies/2025/isaMale.jpg" alt="frenchie puppy">
+                <div class="sold">SOLD</div>
+                <h3>SOLD, Plano, TX</h3>
             </div> 
 
             <div class="card puppy">
@@ -94,14 +96,15 @@
             <div class="card puppy">
                 <h1>girl 3, chocolate and tan</h1>
                 <img src="images/puppies/2025/choctanFem.jpeg" alt="frenchie puppy">
-                <img src="images/puppies/2025/choctanFem1.jpeg" alt="frenchie puppy">
+                <div class="sold">SOLD</div>
+                <h3>SOLD, Dallas, TX</h3>
             </div>
 
             <div class="card puppy">
                 <h1>girl 4, blue fawn</h1>
                 <img src="images/puppies/2025/bluefawnFem.jpeg" alt="frenchie puppy">
                 <div class="sold">SOLD</div>
-                <h3>SOLD, Dallas</h3>
+                <h3>SOLD, Dallas, TX</h3>
             </div>
             
             <div class="card puppy">
