--- a/puppies.html
+++ b/puppies.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>LaBear | French Bulldogs Puppies</title>
+    <title>LaBear | French Bulldog Puppies</title>
     <meta name="keywords" content="Exotic French Bulldog Puppies Available Now">
     <meta name="description" content="Check out our available French Bulldog Puppies. We deliver all over the U.S.">
 </head>
