--- a/puppies.html
+++ b/puppies.html
@@ -53,7 +53,7 @@
             <img src="images/puppies/2025/lilacgroup.jpg" alt="frenchie puppy">
             <img src="images/puppies/2025/3pups.jpeg" alt="frenchie puppy">
 
-            <h1 class="xl">Puppies Available NOW: July 28th, 2025 </h1>
+            <h1 class="xl">Puppies Available NOW: August 16th, 2025 </h1>
             <p class="lead"> All puppies are up-to-date on vaccinations and come with a health guarantee and full breeding rights. Delivery is available. 
                 The prices of the puppies vary depending on sex and color. Please text for the most up-to-date pictures and videos or to schedule a video call and meet a puppy! 214.406.4578
 
@@ -74,11 +74,19 @@
             <div class="card puppy">
                 <h1>boy 2, chocolate</h1>
                 <img src="images/puppies/2025/chocoMale.jpeg" alt="frenchie puppy">
+                <img src="images/puppies/2025/cm.jpg" alt="frenchie puppy">
             </div>
 
             <div class="card puppy">
                 <h1>boy 3, black and tan</h1>
                 <img src="images/puppies/2025/bntMale.jpeg" alt="frenchie puppy">
+                <img src="images/puppies/2025/bntm.jpg" alt="frenchie puppy">
+            </div>
+
+            <div class="card puppy">
+                <h1>boy 4, black</h1>
+                <img src="images/puppies/2025/bm.jpg" alt="frenchie puppy">
+                <img src="images/puppies/2025/bm2.jpg" alt="frenchie puppy">
             </div>
 
             <div class="card puppy">
@@ -87,10 +95,11 @@
                 <img src="images/puppies/2025/newshade1.jpg" alt="frenchie puppy">
             </div>
 
-
             <div class="card puppy">
                 <h1>girl 2, black</h1>
-                <img src="images/puppies/2025/blackFem.jpeg" alt="frenchie puppy">
+                <img src="images/puppies/2025/bf.jpg" alt="frenchie puppy">
+                <img src="images/puppies/2025/bf2.jpg" alt="frenchie puppy">
+
             </div>
             
             <div class="card puppy">
@@ -109,13 +118,15 @@
             
             <div class="card puppy">
                 <h1>girl 5, chocolate and tan fluffy carrier</h1>
-                <img src="images/puppies/2025/choctanfluFem.jpg" alt="frenchie puppy">
-                <img src="images/puppies/2025/choctanfluFem1.jpg" alt="frenchie puppy">
+                <img src="images/puppies/2025/cntf1.jpg" alt="frenchie puppy">
+                <img src="images/puppies/2025/cntf2.jpg" alt="frenchie puppy">
             </div>
 
             <div class="card puppy">
                 <h1>girl 6, lilac</h1>
                 <img src="images/puppies/2025/lilacFem.jpg" alt="frenchie puppy">
+                <div class="sold">SOLD</div>
+                <h3>SOLD, Albuquerque, NM</h3>
             </div>
 
             <!-- <div class="card puppy">
