--- a/puppies.html
+++ b/puppies.html
@@ -47,10 +47,10 @@
         <div>
         </div>
         <div class="container p-5">
-            <img src="images/puppies/2025/isabellagroup.jpeg" alt="frenchie puppy">
-            <img src="images/puppies/2025/isagroup2.jpg" alt="frenchie puppy">
-            <img src="images/puppies/2025/chocgroup.jpg" alt="frenchie puppy">
-            <img src="images/puppies/2025/lilacgroup.jpg" alt="frenchie puppy">
+            <!-- <img src="images/puppies/2025/isabellagroup.jpeg" alt="frenchie puppy">
+            <img src="images/puppies/2025/isagroup2.jpg" alt="frenchie puppy"> -->
+            <!-- <img src="images/puppies/2025/chocgroup.jpg" alt="frenchie puppy">
+            <img src="images/puppies/2025/lilacgroup.jpg" alt="frenchie puppy"> -->
             <img src="images/puppies/2025/3pups.jpeg" alt="frenchie puppy">
 
             <h1 class="xl">Puppies Available NOW: August 16th, 2025 </h1>
