--- a/puppies.html
+++ b/puppies.html
@@ -65,6 +65,8 @@
                 <h1>boy, black - $3,000</h1>
                 <img src="images/puppies/2025/bm2.jpg" alt="frenchie puppy">
                 <img src="images/puppies/2025/bm.jpg" alt="frenchie puppy">
+                <div class="sold">SOLD</div>
+                <h3>SOLD, Longview, TX</h3>
             </div>
 
             <div class="card puppy">
