--- a/puppies.html
+++ b/puppies.html
@@ -50,7 +50,7 @@
         
 
             <h1 class="xl">Puppies Available NOW: October 6th, 2025 </h1>
-            <p class="lead">We have four pups from Silvia and Bodie's litter. We are also expecting a litter of full fluffies in the coming months. Please text for the most up-to-date pictures and videos, or to schedule a video call and meet a puppy: 214.406.4578. All puppies are up-to-date on vaccinations and come with a health guarantee and full breeding rights. Delivery is available. 
+            <p class="lead">We have four pups from Silvia and Bodie's litter. Please text for the most up-to-date pictures and videos, or to schedule a video call and meet a puppy: 214.406.4578. All puppies are up-to-date on vaccinations and come with a health guarantee and full breeding rights. Delivery is available. 
                 The prices of the puppies vary depending on sex and color. 
 
                 
