--- a/puppies.html
+++ b/puppies.html
@@ -49,8 +49,8 @@
         <div class="container p-5">
         
 
-            <h1 class="xl">Puppies Available NOW: October 6th, 2025 </h1>
-            <p class="lead">We have four pups from Silvia and Bodie's litter. Please text for the most up-to-date pictures and videos, or to schedule a video call and meet a puppy: 214.406.4578. All puppies are up-to-date on vaccinations and come with a health guarantee and full breeding rights. Delivery is available. 
+            <h1 class="xl">Puppies Available NOW: October 13th, 2025 </h1>
+            <p class="lead">We have pups from Silvia and Bodie's litter. Please text for the most up-to-date pictures and videos, or to schedule a video call and meet a puppy: 214.406.4578. All puppies are up-to-date on vaccinations and come with a health guarantee and full breeding rights. Delivery is available. 
                 The prices of the puppies vary depending on sex and color. 
 
                 
@@ -64,6 +64,8 @@
                 <h1>boy, blue fawn</h1>
                 <img src="images/puppies/2025/bfm1.jpg" alt="frenchie puppy">
                 <img src="images/puppies/2025/bfm2.jpg" alt="frenchie puppy">
+                <div class="sold">SOLD</div>
+                <h3>SOLD, Dallas</h3>
             </div> 
 
             <div class="card puppy">
