--- a/puppies.html
+++ b/puppies.html
@@ -71,7 +71,7 @@
             <div class="card puppy">
                 <h1>boy, blue merle </h1>
                 <img src="images/puppies/2025/mm1.jpg" alt="frenchie puppy">
-                <img src="images/puppies/2025/mm2.jpg" alt="frenchie puppy">
+                <img src="images/puppies/2025/mm2.jpeg" alt="frenchie puppy">
                 <img src="images/puppies/2025/mm3.jpg" alt="frenchie puppy">
             </div> 
             
