--- a/puppies.html
+++ b/puppies.html
@@ -49,9 +49,9 @@
         <div class="container p-5">
         
 
-            <h1 class="xl">Puppies Available NOW: October 30th, 2025 </h1>
+            <h1 class="xl">Puppies Available NOW: NOv 6th, 2025 </h1>
             <p class="lead">We have 2 girls, and 1 boy, all lilac merles available. Please text for the most up-to-date pictures and videos, or to schedule a video call and meet a puppy: 214.406.4578. All puppies are up-to-date on vaccinations and come with a health guarantee and full breeding rights. Delivery is available. 
-                The prices of the puppies vary depending on sex and color. 
+                The prices of the puppies vary depending on sex and color. With the holidays fast approaching, we can work with you to find the perfect delivery date for your puppy. 
 
                 
                 <!-- <em>Please note: due to a recent spike in spam, calls and texts from 'google voice' numbers will be blocked.</em> -->
