--- a/puppies.html
+++ b/puppies.html
@@ -52,8 +52,8 @@
             <h1 class="xl">Puppies Available NOW: Nov 14th, 2025 </h1>
             <p class="lead">We are so blessed and excited for the Holiday Season this year. Silvia's lilac merles (2 girls, and 1 boy) are available and ready today. 
                 Ready for Christmas: 100% fluffy merle pups (pics below), and our 100% micro lilacs (pics coming next week). Please text 214.406.4578 for the most up-to-date pictures and videos, or to schedule a video call. 
-                All puppies are up-to-date on vaccinations and come with a health guarantee and full breeding rights. Delivery is available. 
-                The prices of the puppies vary depending on sex and color. We can always work with you to find the perfect delivery date for your puppy. 
+                All puppies are up-to-date on vaccinations and come with a health guarantee and full breeding rights. The prices of the puppies vary depending on sex and color. 
+                Delivery is available, and we can always work with you to find the perfect delivery date for your puppy. 
 
                 
                 <!-- <em>Please note: due to a recent spike in spam, calls and texts from 'google voice' numbers will be blocked.</em> -->
